--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,5 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+<%= link_to 'Cadastre-se', new_registration_path %>
+<%= link_to 'Entrar', new_session_path %>
