Apply new design for all pages

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,13 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-
-<%= link_to 'Cadastre-se', new_registration_path %>
-<%= link_to 'Entrar', new_session_path %>
+<section class="resume-section">
+  <div class="resume-section-content">
+    <h1 class="mb-0">
+      Challenge
+      <span class="text-primary">Husky</span>
+    </h1>
+    <div class="subheading mb-5">
+      Created project by 
+      <a href="https://frankyston.dev">Frankyston Lins</a>
+    </div>
+    <p class="lead mb-5">Create and send invoices.</p>
+  </div>
+</section>
