--- a/app/views/layouts/shared/_navigation.html.erb
+++ b/app/views/layouts/shared/_navigation.html.erb
@@ -8,8 +8,12 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link" href="<%= root_path %>">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="<%= new_registration_path %>">Cadastre-se</a></li>
-      <li class="nav-item"><a class="nav-link" href="<%= new_session_path%>">Entrar</a></li>
+      <% if session[:token].nil? %>
+        <li class="nav-item"><a class="nav-link" href="<%= new_registration_path %>">Cadastre-se</a></li>
+        <li class="nav-item"><a class="nav-link" href="<%= new_session_path%>">Entrar</a></li>
+      <% else %>
+        <li class="nav-item"><a class="nav-link" href="<%= invoices_path%>">Invoices</a></li>
+      <% end %>
     </ul>
   </div>
 </nav>
