--- a/app/views/layouts/shared/_navigation.html.erb
+++ b/app/views/layouts/shared/_navigation.html.erb
@@ -7,12 +7,13 @@
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
   <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="<%= root_path %>">Home</a></li>
+      <li class="nav-item"><%= link_to 'Home', root_path, class: 'nav-link' %></li>
       <% if session[:token].nil? %>
-        <li class="nav-item"><a class="nav-link" href="<%= new_registration_path %>">Cadastre-se</a></li>
-        <li class="nav-item"><a class="nav-link" href="<%= new_session_path%>">Entrar</a></li>
+        <li class="nav-item"><%= link_to 'Cadastre-se', new_registration_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'Entrar', new_session_path, class: 'nav-link' %></li>
       <% else %>
-        <li class="nav-item"><a class="nav-link" href="<%= invoices_path%>">Invoices</a></li>
+        <li class="nav-item"><%= link_to 'Invoices', invoices_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to 'Sair', destroy_session_path, method: :delete, data: { confirm: "Deseja realmente sair?" }, class: 'nav-link' %></li>
       <% end %>
     </ul>
   </div>
