--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -9,11 +9,31 @@
       <a href="https://frankyston.dev">invoices</a>
     </div>
     <div class="subheading mb-2">
+      <h2>Filtro</h2>
+      <%= simple_form_for :invoice, url: invoices_path, method: :get do |f| %>
+        <div class="row">
+          <div class="col">
+            <%= f.input :number %>
+          </div>
+          <div class="col">
+            <%= f.input :created_at, as: :date, html5: true %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <%= f.submit 'Enviar', class: 'btn btn-primary' %>
+            <%= link_to 'Limpar filtro', invoices_path, class: 'btn btn-secondary' %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div class="subheading mb-2">
       <% if @invoices.any? %>
         <table class="table table-hover">
           <thead>
             <tr>
               <th scope="col">#</th>
+              <th scope="col">Number</th>
               <th scope="col">From</th>
               <th scope="col">To</th>
               <th scope="col">Invoice to email</th>
@@ -25,6 +45,7 @@
             <% @invoices.each do |invoice| %>
               <tr>
                 <th scope="row"><%= invoice.identifier %></th>
+                <td><%= invoice.number %></td>
                 <td><%= invoice.invoice_from %></td>
                 <td><%= invoice.invoice_to %></td>
                 <td><%= invoice.invoice_to_email %></td>
